<resources>
    <string name="app_name">Radar Chart</string>
    <string name="base_currency_select">Base Currency Selection</string>
    <string name="target_currency_select">Comparison Currencies</string>
    <string name="term_select">Term Selection</string>
    <string name="graph">Graph</string>
    <string name="setting">Setting</string>
    <string name="base">base</string>
    <string name="base_currency">Base Currency :</string>
    <string name="targets">targets</string>
    <string name="term">Term</string>
    <string name="period">period</string>
    <string name="comparison">Comparison Currencies</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="gbp">GBP</string>
    <string name="jpy">JPY</string>
    <string name="sgd">SGD</string>
    <string name="cny">CNY</string>
    <string name="cad">CAD</string>
    <string name="init_currency">USD</string>
    <string name="init_targets">EUR,GBP,JPY,CNY</string>
    <string name="item">item</string>
    <string name="term_id">term_id</string>
    <string name="item_term">term</string>
    <string name="days">days</string>
    <string name="init_term_id">00</string>
    <string name="png">png</string>
    <string name="code">code</string>
    <string name="country">country</string>
    <string name="dialog_title">Info</string>
    <string name="dialog_message_at_least">Please select at least three currencies.</string>
    <string name="dialog_message_over">Please select less than seven currencies.</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dash</string>
    <string name="title_notifications">JPY</string>
    <string name="latest_url">https://api.exchangeratesapi.io/latest</string>
    <string name="period_url">https://api.exchangeratesapi.io/history</string>
    <string name="comparison_currency">USD,EUR,GBP,JPY,CNY,SGD,MYR,AUD,NZD,CAD,HKD,CHF,RUB,PHP,IDR,INR,THB,KRW</string>
</resources>
